@@ -17,6 +17,10 @@ abstract class Peak_Codegen
 	 */
 	const LINE_BREAK = "\n";
 	
+	/**
+	 * PHP open tag
+	 */
+	const PHP_OPEN_TAG = '<?php';
 	
 	/**
 	 * Get preview of generated code
@@ -30,15 +34,23 @@ abstract class Peak_Codegen
 	}
 	
 	/**
-	 * Save generated code * need to rewrited
+	 * Save generated code
 	 *
-	 * @param string $filepath
+	 * @param  string $filepath filepath       where content will be saved, if file doesn't exists it will create it.
+	 * @param  bool   $add_php_open_tag        add php open tag in file content
+	 * @param  misc   $file_put_contents_flags add file_put_contents_flags() flags
+	 * @return bool
 	 */
-	public function save($filepath)
+	public function save($filepath, $add_php_open_tag = false, $file_put_contents_flags = 0)
 	{
-		$this->preGenerate();
-		$data = $this->generate();
-		file_put_contents($filepath, $data);
+		$data = $this->preview();
+		
+		if($add_php_open_tag) {
+		    $data = Peak_Codegen::PHP_OPEN_TAG . Peak_Codegen::LINE_BREAK . $data;
+		}
+		
+		$result = @file_put_contents($filepath, $data, $file_put_contents_flags);
+		return $result;
 	}
 	
 	/**
