@@ -37,13 +37,13 @@ class Peak_ViewTest extends PHPUnit_Framework_TestCase
 	function testCreateInstance()
 	{
 		$view = new Peak_View();		
-		$this->assertType('Peak_View', $view); 
+		$this->assertInstanceOf('Peak_View', $view); 
 	}
 	
 	function testCreateInstanceWithArray()
 	{
 		$view = new Peak_View(array('test' => 'value'));		
-		$this->assertType('Peak_View', $view);
+		$this->assertInstanceOf('Peak_View', $view);
 		
 		$vars = $view->getVars();		
 		$this->assertArrayHasKey('test', $vars);
